--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,101 @@
+amqp==1.4.9
+anyjson==0.3.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.5.2
+asttokens==2.0.5
+async-generator==1.10
+attrs==21.4.0
+backcall==0.2.0
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+billiard==3.3.0.23
+bleach==5.0.1
+celery==3.1.26.post2
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
-coreapi==2.3.3
-coreschema==0.0.4
-Django==4.1
-django-environ==0.9.0
-django-filter==22.1
-django-rest-passwordreset==1.2.1
-django-rest-swagger==2.2.0
-djangorestframework==3.13.1
-djangorestframework-simplejwt==5.2.0
-drf-yasg==1.21.3
+chromedriver-binary==106.0.5249.21.0
+colorama==0.4.5
+debugpy==1.6.2
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.4
+Django==4.0.6
+django-celery==3.3.1
+dnspython==2.2.1
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.15.3
+filelock==3.7.1
+h11==0.14.0
 idna==3.3
-importlib-metadata==4.12.0
-inflection==0.5.1
-itypes==1.2.0
+importlib-resources==5.8.0
+instaloader==4.9.4
+ipykernel==6.15.1
+ipython==8.4.0
+ipython-genutils==0.2.0
+jedi==0.18.1
 Jinja2==3.1.2
-Markdown==3.4.1
+jsonschema==4.7.2
+jupyter-client==7.3.4
+jupyter-core==4.11.1
+jupyterlab-pygments==0.2.2
+kombu==3.0.37
+lxml==4.9.1
 MarkupSafe==2.1.1
-mysqlclient==2.1.1
-openapi-codec==1.3.2
+matplotlib-inline==0.1.3
+mistune==0.8.4
+nbclient==0.6.6
+nbconvert==6.5.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+notebook==6.4.12
+numpy==1.23.1
+outcome==1.2.0
 packaging==21.3
-PyJWT==2.4.0
+pandas==1.4.3
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+platformdirs==2.5.2
+prometheus-client==0.14.1
+prompt-toolkit==3.0.30
+psutil==5.9.1
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.12.0
+pymongo==4.1.1
 pyparsing==3.0.9
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.1
+pywin32==304
+pywinpty==2.0.6
+pyzmq==23.2.0
 requests==2.28.1
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-simplejson==3.17.6
+selenium==4.4.3
+Send2Trash==1.8.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
+stack-data==0.3.0
+terminado==0.15.0
+tinycss2==1.1.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.3.0
+trio==0.21.0
+trio-websocket==0.9.2
 tzdata==2022.1
-uritemplate==4.1.1
 urllib3==1.26.11
+virtualenv==20.15.1
+wcwidth==0.2.5
+webdriver-manager==3.8.3
+webencodings==0.5.1
+wsproto==1.2.0
 zipp==3.8.1
